--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name":"e-shop-tutorial",
+    "name":"IITJ_SecondShop",
     "builds":[
         {"src":"server.js","use":"@vercel/node"}
     ],
